syntax = "proto3";

package proto;

import "code.proto";

option java_generic_services = true;
option java_package = "net.coding.proto.platform.project";
option java_outer_classname = "ProjectSettingProto";


message ProjectSettingByCodeRequest {
  int32 project_id = 1;
  string code = 2;
}

message ProjectSettingByCodeResponse {
  proto.common.Code code = 1;
  string message = 2;
  string value = 3;
}

message ProjectSettingByCodesRequest {
  int32 project_id = 1;
  repeated string codes = 2;
}

message ProjectSettingByCodesResponse {
  proto.common.Code code = 1;
  string message = 2;
  repeated ProjectSettingMessage data = 3;
}

message ProjectSettingMessage {
  int32 project_id = 1;
  string code = 2;
  string value = 3;
  int32 id = 4;
}

message ProjectSettingUpdateRequest {
  int32 project_id = 1;
  string code = 2;
  string value = 3;
}

message ProjectSettingUpdateResponse {
  proto.common.Code code = 1;
  string message = 2;
  ProjectSettingMessage data = 3;
}

message ProjectSettingBatchUpdateRequest {
  repeated ProjectSettingMessage projectSettings = 1;
}

message ProjectSettingBatchUpdateResponse {
  proto.common.Code code = 1;
  string message = 2;
}

message ProjectSettingGetByIdRequest {
  int32 id = 1;
}

message ProjectSettingGetByIdResponse {
  proto.common.Code code = 1;
  string message = 2;
  ProjectSettingMessage data = 3;
}

message ProjectSettingByProjectIdsAndCodeRequest {
  repeated int32 project_id = 1;
  string code = 2;
}

message ProjectSettingByProjectIdsAndCodeResponse {
  proto.common.Code code = 1;
  string message = 2;
  repeated ProjectSettingMessage value = 3;
}

service ProjectSettingService {
  rpc getProjectSettingByCode (ProjectSettingByCodeRequest) returns (ProjectSettingByCodeResponse);
  rpc getProjectSettingByCodes (ProjectSettingByCodesRequest) returns (ProjectSettingByCodesResponse);
  rpc projectSettingUpdate (ProjectSettingUpdateRequest) returns (ProjectSettingUpdateResponse);
  rpc projectSettingBatchUpdate (ProjectSettingBatchUpdateRequest) returns (ProjectSettingBatchUpdateResponse);
  rpc getProjectSettingById (ProjectSettingGetByIdRequest) returns (ProjectSettingGetByIdResponse);
  rpc getProjectSettingByProjectIdsAndCode (ProjectSettingByProjectIdsAndCodeRequest) returns (ProjectSettingByProjectIdsAndCodeResponse);
}